src/test/ui/hrtb/hrtb-just-for-static.nll.stderr
error: implementation of `Foo` is not general enough
  --> $DIR/hrtb-just-for-static.rs:24:5
   |
LL |     want_hrtb::<StaticInt>()
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ implementation of `Foo` is not general enough
   |
   = note: `StaticInt` must implement `Foo<&'0 isize>`, for any lifetime `'0`...
   = note: ...but it actually implements `Foo<&'static isize>`

error: lifetime may not live long enough
  --> $DIR/hrtb-just-for-static.rs:30:5
   |
LL | fn give_some<'a>() {
   |              -- lifetime `'a` defined here
LL |     want_hrtb::<&'a u32>()
   |     ^^^^^^^^^^^^^^^^^^^^ requires that `'a` must outlive `'static`
   |
   = help: consider replacing `'a` with `'static`

error: higher-ranked subtype error
  --> $DIR/hrtb-just-for-static.rs:30:5
   |
LL |     want_hrtb::<&'a u32>()
   |     ^^^^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

